images aligned correctly

--- a/src/style.sass
+++ b/src/style.sass
@@ -4,6 +4,7 @@ body
   color: white
   width: 100vw
   height: 100vh
+  overflow: hidden
 
 h1
   font-family: 'arial black'
@@ -16,20 +17,20 @@ h1
   margin: 5px
   border: solid 3px rgb(198, 232, 233)
     border-radius: 2px
-  height: 135px
-  width: 90px
+  height: 125px
+  width: 80px
   text-align: center
   line-height: 130px
 
   &.up
     background-color: rgb(223, 224, 221)
     background-size: cover
-    padding-bottom: 50px
+    padding-bottom: 40px
 
 
   &.down
     background-color: rgb(223, 224, 221)
-    padding-bottom: 50px
+    padding-bottom: 40px
 
 
 main
@@ -40,7 +41,10 @@ main
   justify-content: space-around
   margin-left: 100px
   margin-right: 500px
+  flex-direction: column
   flex-direction: row
+  overflow: hidden
+
 
 h2
   font-size: 125px
@@ -48,7 +52,7 @@ h2
   text-align: center
   font-family: 'Century Gothic'
   font-weight: bolder
-  padding-top: 250px
+  padding-top: 225px
   text-shadow: 5px 5px black
 
 
@@ -56,6 +60,7 @@ h2
   background-color: black
   background-image: url ('http://wallpapercave.com/wp/1qZn6tq.jpg')
   background-size: cover
+  background-repeat: no-repeat
 
   // background
   // 'http://www.netflixseries.net/wp-content/uploads/2014/06/dexter.jpg'
